--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: archify
-description: A CLI tool to configure and generate project architecture
+description: A CLI tool for generating clean architecture structure in Flutter projects.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+homepage: https://github.com/ashiq-dev-codes/archify
+repository: https://github.com/ashiq-dev-codes/archify.git
+issue_tracker: https://github.com/ashiq-dev-codes/archify/issues
 
 environment:
   sdk: ^3.9.2
@@ -20,4 +22,4 @@ dev_dependencies:
   lints: ^6.0.0
 
 executables:
-  archify: archify
+  archify: bin/archify.dart
