--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: archify
 description: A CLI tool for generating clean architecture structure in Flutter projects.
-version: 1.0.2
+version: 1.0.3
 homepage: https://github.com/ashiq-dev-codes/archify
 repository: https://github.com/ashiq-dev-codes/archify.git
 issue_tracker: https://github.com/ashiq-dev-codes/archify/issues
@@ -15,6 +15,7 @@ dependencies:
   args: ^2.7.0
   yaml: ^3.1.3
   yaml_edit: ^2.2.2
+  pubspec_parse: ^1.5.0
   mustache_template: ^2.0.1
 
 dev_dependencies:
