--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: archify
 description: A CLI tool for generating clean architecture structure in Flutter projects.
-version: 1.0.3
+version: 1.0.4
 homepage: https://github.com/ashiq-dev-codes/archify
 repository: https://github.com/ashiq-dev-codes/archify.git
 issue_tracker: https://github.com/ashiq-dev-codes/archify/issues
@@ -8,9 +8,14 @@ issue_tracker: https://github.com/ashiq-dev-codes/archify/issues
 environment:
   sdk: ^3.8.1
 
-# Add regular dependencies here.
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  windows:
+
 dependencies:
-  
   path: ^1.9.1
   yaml: ^3.1.3
   yaml_edit: ^2.2.2
